[package]
name = "pilcrow"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
euclid = "0.17"
indexmap = "1.0"
lazy_static = "1.0"
libc = "0.2"
pulldown-cmark = "0.1"
rayon = "1.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2"
cocoa = "*"
core-foundation = "*"
core-graphics = "*"
core-text = "*"

[build-dependencies]
cbindgen = "0.5"
